fix bug #45553 (Using XPath for attributes with a namespace does not work) add test

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@266065 c90b9560-bf6c-de11-be94-00142212c4b1